--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "url": ""
   },
   "dependencies": {
-    "express": ">=2.5.9",
-    "socket.io": ">=0.9.6",
-    "underscore": ">=1.3.3"
+    "express": "2.5.9",
+    "socket.io": "0.9.6",
+    "underscore": "1.3.3"
   },
   "devDependencies": {},
   "optionalDependencies": {},
   "engines": {
-    "node": "*"
+    "node": "0.6.x",
+    "npm": "1.1.x"
   }
 }
